# adventofcode

./: .gitignore  Cargo.toml  day-1.rs  day-10.rs  day-11.rs  day-13.rs  day-15.rs  day-16.rs  day-17.rs  day-18.rs  day-19.rs  day-2.cpp  day-2.rs  day-21.rs  day-22.rs  day-23.rs  day-24.rs  day-25.rs  day-3.rs  day-4.rs  day-5.rs  day-6.rs  day-7.rs  day-8.rs  day-9.rs
2019/: Cargo.toml
2019/src/: day-1.rs  day-10.rs  day-2.rs  day-3.rs  day-4.rs  day-5.rs  day-6.rs  day-7.rs  day-8.rs  day-9.rs
2020/: Cargo.toml  day-1.cpp  day-10.rs  day-12.rs  day-14.rs  day-20.rs  day-25.rs  day-3.cpp  day-4.rs  day-6.rs
2021/: Cargo.toml
2021/src/: day-1.rs  day-10.rs  day-11.rs  day-12.rs  day-13.rs  day-14.rs  day-15.rs  day-16.rs  day-17.rs  day-18.rs  day-19.rs  day-2.rs  day-20.rs  day-21.rs  day-22.rs  day-23.rs  day-24.rs  day-25.rs  day-3.rs  day-4.rs  day-5.rs  day-6.rs  day-7.rs  day-8.rs  day-9.rs
2022/: Cargo.toml
2022/src/: day-1.rs  day-10.rs  day-11.rs  day-12.rs  day-13.rs  day-14.rs  day-15.rs  day-16.rs  day-17.rs  day-18.rs  day-19.rs  day-2.rs  day-20.rs  day-21.rs  day-22.rs  day-23.rs  day-24.rs  day-25.rs  day-3.rs  day-4.rs  day-5.rs  day-6.rs  day-7.rs  day-8.rs  day-9.rs
2023/: Cargo.toml
2023/src/: day-01.rs  day-02.rs  day-03.rs  day-04.rs  day-05.rs  day-06.rs  day-07.rs  day-08.rs  day-09.rs  day-10.rs  day-11.rs  day-12.rs  day-13.rs  day-14.rs  day-15.rs  day-16.rs  day-17.rs  day-18.rs  day-19.rs  day-20.rs  day-21.rs  day-22.rs  day-23.rs
