[package]
name = "adventofcode-2020"
version = "0.1.0"
authors = ["Pieter De Baets <pieter.debaets@gmail.com>"]
edition = "2018"
include = ["*.rs"]

[[bin]]
name = "day-1"
path = "day-1.rs"

[[bin]]
name = "day-2"
path = "day-2.rs"

[[bin]]
name = "day-3"
path = "day-3.rs"

[[bin]]
name = "day-4"
path = "day-4.rs"

[[bin]]
name = "day-5"
path = "day-5.rs"

[[bin]]
name = "day-6"
path = "day-6.rs"

[[bin]]
name = "day-7"
path = "day-7.rs"

[[bin]]
name = "day-8"
path = "day-8.rs"

[[bin]]
name = "day-9"
path = "day-9.rs"

[[bin]]
name = "day-10"
path = "day-10.rs"

[[bin]]
name = "day-11"
path = "day-11.rs"

[[bin]]
name = "day-12"
path = "day-12.rs"

[[bin]]
name = "day-13"
path = "day-13.rs"

[[bin]]
name = "day-14"
path = "day-14.rs"

[[bin]]
name = "day-15"
path = "day-15.rs"

[[bin]]
name = "day-16"
path = "day-16.rs"

[[bin]]
name = "day-17"
path = "day-17.rs"

[[bin]]
name = "day-18"
path = "day-18.rs"

[[bin]]
name = "day-19"
path = "day-19.rs"

[[bin]]
name = "day-20"
path = "day-20.rs"

[[bin]]
name = "day-21"
path = "day-21.rs"

[[bin]]
name = "day-22"
path = "day-22.rs"

[[bin]]
name = "day-23"
path = "day-23.rs"

[[bin]]
name = "day-24"
path = "day-24.rs"

[[bin]]
name = "day-25"
path = "day-25.rs"

[dependencies]
regex = "1"
lazy_static = "1.4.0"
itertools = "0.9.0"