[package]
name = "adventofcode-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
lazy_static = "1.4.0"
regex = "1.5.4"
nom = "7.1.0"

[[bin]]
name = "day-1"
path = "src/day-1.rs"

[[bin]]
name = "day-2"
path = "src/day-2.rs"

[[bin]]
name = "day-3"
path = "src/day-3.rs"

[[bin]]
name = "day-4"
path = "src/day-4.rs"

[[bin]]
name = "day-5"
path = "src/day-5.rs"

[[bin]]
name = "day-6"
path = "src/day-6.rs"

[[bin]]
name = "day-7"
path = "src/day-7.rs"

[[bin]]
name = "day-8"
path = "src/day-8.rs"

[[bin]]
name = "day-9"
path = "src/day-9.rs"

[[bin]]
name = "day-10"
path = "src/day-10.rs"

[[bin]]
name = "day-11"
path = "src/day-11.rs"

[[bin]]
name = "day-12"
path = "src/day-12.rs"

[[bin]]
name = "day-13"
path = "src/day-13.rs"

[[bin]]
name = "day-14"
path = "src/day-14.rs"

[[bin]]
name = "day-15"
path = "src/day-15.rs"

[[bin]]
name = "day-16"
path = "src/day-16.rs"

[[bin]]
name = "day-17"
path = "src/day-17.rs"
