[package]
name = "adventofcode-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
once_cell = "1.16.0"
regex = "1.7.0"

[[bin]]
name = "day-1"
path = "src/day-1.rs"

[[bin]]
name = "day-2"
path = "src/day-2.rs"

[[bin]]
name = "day-3"
path = "src/day-3.rs"

[[bin]]
name = "day-4"
path = "src/day-4.rs"

[[bin]]
name = "day-5"
path = "src/day-5.rs"

[[bin]]
name = "day-6"
path = "src/day-6.rs"

[[bin]]
name = "day-7"
path = "src/day-7.rs"

[[bin]]
name = "day-8"
path = "src/day-8.rs"

[[bin]]
name = "day-9"
path = "src/day-9.rs"

[[bin]]
name = "day-10"
path = "src/day-10.rs"
